@@ -22,6 +22,7 @@ calculate.probabilities(
   useSimulatedPower,
   simThreshold,
   speedPowerCalc,
+  indepSNPs,
   ssize.ratio.de,
   returnResultsDetailed
 )
@@ -70,6 +71,10 @@ of the analytic (only for the eQTL analysis)}
 
 \item{speedPowerCalc}{Option to speed power calculation by skipping all genes with
 an expression probability less than 0.01 (as overall power is anyway close to 0)}
+
+\item{indepSNPs}{Number of independent SNPs assumed for each loci (for eQTL
+Bonferroni multiple testing correction the number of tests are estimated
+as number expressed genes * indepSNPs)}
 
 \item{ssize.ratio.de}{In the DE case, ratio between sample size of group 0
 (control group) and group 1 (1=balanced design)}
